# brainxx

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  makefile  sample.xx
documents/specification/: ja.md
examples/call_c_function/: fn10.c  main.xx  makefile  test.sh
examples/called_by_c/: fn15.xx  main.c  makefile  test.sh
examples/fibonacci/: fibonacci.xx  makefile  test.sh
examples/fizzbuzz/: fizzbuzz.xx  makefile  test.sh
examples/text_input/: makefile  test.sh  text_input.xx
include/: c-stack.h  compiler.h  error.h  file.h
include/compiler/: c-ctrl.h  c-tag.h  compiler.h  consume.h  output.h  output_x86_64.h  read_num.h
src/: CMakeLists.txt  brainxx.c  compiler.c  error.c  file.c
src/compiler/: CMakeLists.txt  c-ctrl.c  c-stack.c  c-tag.c  compiler.c  consume.c  output.c  output_x86_64.c  read_num.c
test/: example_test.sh  sample.s  t-stack-op-add-001.s  t-stack-op-add-001.xx  t-stack-op-cl-001.xx  t-stack-op-div-001.xx  t-stack-op-eg-001.xx  t-stack-op-el-001.s  t-stack-op-eqgreater-001.s  t-stack-op-equal-001.s  t-stack-op-mod-001.xx  t-stack-op-mul-001.s  t-stack-push-001.s  t-stack-push-003.s  test.sh
test/args/: test.sh
test/compile/: test.sh
test/compile/ctrl/: rep-001.s  rep-002.s  rep-003.s  rep-003.xx  ret-001.s  spl-001.s  spl-001.xx  spr-001.s  spr-001.xx
test/ctrl/: rep-001.xx  rep-002.xx  ret-001.xx
test/run/: test.sh
test/run/003-tag/: 001-def-jmp.xx  002-num_str.xx
test/run/004-fn/: 001-call-single.xx  002-call-number.xx  003-call-double.xx  004-call-1arg.xx  005-call-6args.xx  006-num_str.xx
(+97 files in other folders)
